# momentedge-clipper

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  flake.nix  rustfmt.toml
.beads/: .gitignore  config.yaml  metadata.json
.claude/: REVIEW.md
.claude/skills/ci/: SKILL.md
.claude/skills/packaging/: SKILL.md
.config/: nextest.toml
.github/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
config/: cam_sim.yaml
crates/clipper/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  build.rs
crates/clipper/src/: clip.rs  decode.rs  discover.rs  handler.rs  interface.rs  main.rs  stamp.rs  supervision.rs  tail.rs  trigger.rs  watch.rs
crates/clipper/tests/: e2e.rs
crates/clipper/tests/harness/: mod.rs
crates/edgestream-rec/: CLAUDE.md  Cargo.toml
crates/edgestream-rec-cont/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml
crates/edgestream-rec-cont/src/: clip.rs  main.rs  tail.rs  watch.rs
crates/edgestream-rec-cont/tests/: e2e.rs
crates/edgestream-rec-cont/tests/harness/: mod.rs
crates/edgestream-rec/src/: main.rs  mcap_copy.rs
crates/r2r-sub/: CLAUDE.md  Cargo.toml
crates/r2r-sub/src/: main.rs
crates/rclrs-sub/: CLAUDE.md  Cargo.toml
crates/rclrs-sub/src/: main.rs
crates/trigger-pub/: CLAUDE.md  Cargo.toml
crates/trigger-pub/src/: main.rs
edgestream_msgs/: CMakeLists.txt  package.xml
edgestream_msgs/msg/: Recorded.msg  Trigger.msg
example/: README.md
example/continuous/: README.md
example/launch/: README.md  clipper.launch.py  record.launch.py
example/split-bags/: README.md
example/systemd/: README.md
examples/: README.md
examples/chunked-mcap-writer/: Cargo.toml  README.md
examples/chunked-mcap-writer/src/: main.rs
examples/continuous/: README.md
examples/cu-mcap-record/: Cargo.toml  README.md  build.rs  copperconfig.ron
examples/cu-mcap-record/src/: main.rs
examples/custom-mcap-writer/: Cargo.toml  README.md
examples/custom-mcap-writer/src/: main.rs
examples/launch/: README.md  clipper.launch.py  record.launch.py
examples/trigger-pub/: CLAUDE.md  Cargo.toml  README.md  start_demo_trigger_pub.sh
examples/trigger-pub/src/: main.rs
momentedge_msgs/: CMakeLists.txt  package.xml
momentedge_msgs/msg/: Recorded.msg  Trigger.msg
nix/: binaries.nix  edgestream-msgs.nix  images.nix  momentedge-msgs.nix  ros-env.nix
scripts/: build-on-target.sh  package-clipper-deb.sh  package-deb.sh  package-msgs-deb.sh  prune-record.sh  record-continuous.sh  record.sh  ros-build-messages.sh  ros-cargo.sh  ros-setup.sh  run.sh  start_demo_trigger_pub.sh  start_recorder.sh
scripts/prune-recordings/: README.md  edgestream-prune.service  edgestream-prune.timer  install-remote.sh  prune.sh
sim/: CLAUDE.md  README.md  cam_sim.sh
sim/config/: recorder_params.yaml
sim/launch/: sim_camera.launch.py  sim_camera_record.launch.py
src/: main.rs
