[workspace]
# A virtual workspace doesn't infer the resolver from member editions, so set it
# explicitly; "3" is the edition-2024 resolver. Without this Cargo falls back to
# resolver "1" and warns.
resolver = "3"
members = [
    "crates/clipper",
    "crates/trigger-pub",
]

# Shared package metadata; members inherit with `version.workspace = true` etc.
[workspace.package]
version = "0.0.3"
edition = "2024"

# Shared dependency versions; members inherit with `<crate>.workspace = true` and
# keep their own role comment (and any crate-specific features) at the use site.
[workspace.dependencies]
# Pinned to the 0.9.6 git tag rather than the 0.9.5 crates.io release: 0.9.6
# adds `lyrical` to its supported-distro list and cfg-gates the
# `RMW_QOS_POLICY_LIVELINESS_MANUAL_BY_NODE` rmw variant that lyrical dropped, so
# the r2r crates build there. 0.9.6 is not yet on crates.io — swap back to a
# version string once it is (beads clipper-4rw). Rolling needs more than
# 0.9.6 (beads clipper-2xb).
r2r = { git = "https://github.com/sequenceplanner/r2r.git", tag = "0.9.6" }
futures = "0.3"
crossbeam-channel = "0.5"
signal-hook = "0.3"
mcap = "0.24"
anyhow = "1"
# CLI + env parsing: `derive` for the `Config` parser, `env` so each arg falls
# back to a `MOMENTEDGE_*` environment variable, `string` so the runtime-built
# env names (one prefix applied to every arg) can be set on the args.
clap = { version = "4", features = ["derive", "env", "string"] }
log = "0.4"
pretty_env_logger = "0.5"
fastrand = "2"
