[workspace]
# A virtual workspace doesn't infer the resolver from member editions, so set it
# explicitly; "3" is the edition-2024 resolver. Without this Cargo falls back to
# resolver "1" and warns.
resolver = "3"
members = [
    "crates/clipper",
    # Example trigger source — a workspace member so it inherits the shared
    # package metadata and dependency versions below, not a deployable crate.
    "examples/trigger-pub",
    # Minimal MCAP writer example — writes one MCAP file directly with the
    # `mcap` crate (no ROS/r2r), owning `publish_time` outright: JSON channels
    # carrying capture stamps, plus an in-recording trigger channel.
    "examples/custom-mcap-writer",
    # Minimal MCAP writer example — tailable chunked + zstd-compressed output
    # via the `mcap` crate's buffered chunk mode (`use_chunks(true)` +
    # `disable_seeking(true)`): the second compliant producer path.
    "examples/chunked-mcap-writer",
]
# Excluded from the workspace: this copper (cu29) example pulls the published
# cu29 1.0 dependency tree, which must never load into the ROS dev shells or the
# per-distro CI matrix. It carries its own committed Cargo.lock and is built and
# tested by a dedicated ROS-free CI job. See examples/cu-mcap-record/README.md.
exclude = ["examples/cu-mcap-record"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

# Shared dependency versions; members inherit with `<crate>.workspace = true` and
# keep their own role comment (and any crate-specific features) at the use site.
[workspace.dependencies]
# Pinned to the 0.9.6 git tag rather than the 0.9.5 crates.io release: 0.9.6
# adds `lyrical` to its supported-distro list and cfg-gates the
# `RMW_QOS_POLICY_LIVELINESS_MANUAL_BY_NODE` rmw variant that lyrical dropped, so
# the r2r crates build there. 0.9.6 is not yet on crates.io — swap back to a
# version string once it is (beads clipper-4rw). Rolling needs more than
# 0.9.6 (beads clipper-2xb).
r2r = { git = "https://github.com/sequenceplanner/r2r.git", tag = "0.9.6" }
futures = "0.3"
crossbeam-channel = "0.5"
signal-hook = "0.3"
mcap = "0.24"
anyhow = "1"
# CLI + env parsing: `derive` for the `Config` parser, `env` so each arg falls
# back to a `MOMENTEDGE_*` environment variable, `string` so the runtime-built
# env names (one prefix applied to every arg) can be set on the args.
clap = { version = "4", features = ["derive", "env", "string"] }
log = "0.4"
pretty_env_logger = "0.5"
fastrand = "2"
# JSON payloads for the mcap-writer examples.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
