<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>momentedge_msgs</name>
  <version>0.1.0</version>
  <description>
    Event interfaces for the clipper triggered recorder: a Trigger that
    requests a clip around a timestamp, and a Recorded notification emitted once
    the clip has been written to disk.
  </description>
  <maintainer email="s@stfl.dev">Stefan Lendl</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
