[package]
name = "clipper"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clipper"
path = "src/main.rs"

[dependencies]
# r2r: ROS2 client bindings. Typed subscription to the Trigger topic and a typed
# Recorded publisher. No WriteSplitEvent — coverage comes from tailing the file.
r2r.workspace = true
# `futures::StreamExt` + `futures::executor::block_on` drain the typed trigger
# stream on the consumer thread; r2r's subscriptions are futures-channel-backed
# and need no async runtime.
futures.workspace = true
# FIFO channel plumbing between the threads: the extraction job queue, each
# job's reply channel, and the exit channels `supervise` select!s over.
crossbeam-channel.workspace = true
# SIGINT/SIGTERM delivered as a message on a channel `supervise` selects on.
signal-hook.workspace = true
# MCAP record parsing (`parse_record`, `read::LinearReader::sans_magic`,
# `read::ChunkReader`) for the tail scan and extraction, and `Writer` for the
# clip output (schemas/channels by content, summary + footer on `finish`).
mcap.workspace = true
# Error plumbing for the tail and extraction paths.
anyhow.workspace = true
# Layered configuration: defaults -> optional TOML file -> CLIPPER_*
# environment variables, deserialized into `Config` (no CLI args).
config.workspace = true
# Derives `Deserialize` for `Config`.
serde.workspace = true
# Logging via the `log` facade; pretty_env_logger is the backend (honours RUST_LOG).
log.workspace = true
pretty_env_logger.workspace = true

# Dev-dependencies serve the live e2e suite (tests/e2e.rs + tests/harness/);
# the inline unit tests use only the crate's own dependencies.
[dev-dependencies]
# Per-test temp trees (record/, triggered/, logs/) wiped on drop.
tempfile = "3"
# Process-group signalling (SIGINT/SIGTERM/SIGKILL) for tearing down the
# ros2 / recorder / extractor child processes, panic included.
libc = "0.2"
# Test structuring: expands the storage-profile matrix into per-case tests
# that nextest runs as isolated processes.
rstest = "0.26"
