[package]
name = "trigger-pub"
version.workspace = true
edition.workspace = true

[dependencies]
# r2r: ROS2 client bindings. Used here for a typed publisher of
# edgestream_msgs/Trigger and a RosTime clock for the trigger_time stamp.
r2r = "0.9.5"
# Logging via the `log` facade; pretty_env_logger is the backend (honours RUST_LOG).
log = "0.4"
pretty_env_logger = "0.5"
