[package]
name = "trigger-pub"
version.workspace = true
edition.workspace = true

[dependencies]
# r2r: ROS2 client bindings. Used here for a typed publisher of
# momentedge_msgs/Trigger and a RosTime clock for the trigger_time stamp.
r2r.workspace = true
# Logging via the `log` facade; pretty_env_logger is the backend (honours RUST_LOG).
log.workspace = true
pretty_env_logger.workspace = true
# Small PRNG for the per-trigger random pre/postroll windows.
fastrand.workspace = true
