[package]
name = "cu-mcap-record"
# A copper (cu29) example, not a published crate.
publish = false
# A workspace member (see the root Cargo.toml): it inherits the shared
# version / edition / license and the `[workspace.dependencies]` versions via
# `.workspace = true`, like the sibling examples. Its copper dependencies (cu29
# and the cu-bincode fork) stay declared here by decision — they are NOT hoisted
# into `[workspace.dependencies]`, so the cu29 tree stays scoped to this crate.
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# The copper runtime umbrella crate: runtime, `copper_runtime` macro,
# `input_msg!` / `output_msg!`, clock types, config, `NoopLogger`, and the
# `Reflect` / `Serialize` / `Deserialize` derives via `cu29::prelude`. Kept
# crate-local (not a workspace dependency) so its cu29 tree does not enter
# `[workspace.dependencies]`.
cu29 = "1.0"
# MUST be the `cu-bincode` fork imported under the key `bincode`: cu29's
# `CuMsgPayload` bound requires the fork's `Encode` / `Decode` traits, not plain
# crates.io bincode's. Crate-local for the same reason as cu29.
bincode = { package = "cu-bincode", version = "2.0", features = ["derive"] }
# The remaining dependencies are shared with the rest of the workspace.
mcap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
signal-hook.workspace = true
